--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,13 @@ target_compile_features(sample_volume PRIVATE cxx_std_17)
 
 add_executable(fixed_point_demo fixed_point_demo.cpp)
 target_compile_features(fixed_point_demo PRIVATE cxx_std_17)
+
+add_library(intersect intersect.cpp)
+target_compile_features(intersect PRIVATE cxx_std_17)
+
+include(CTest)
+
+add_executable(test_intersection intersect_test.cpp)
+target_link_libraries(test_intersection PRIVATE intersect)
+target_compile_features(test_intersection PRIVATE cxx_std_17)
+add_test(NAME test_intersection COMMAND test_intersection)
