Commit uncommitted changes in CMakeLists.txt
forgot to commit these, these should have been committed alongside the previous two commits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(distance distance.cpp)
 target_compile_features(distance PRIVATE cxx_std_17)
 
 add_library(bvh bvh.cpp)
+target_link_libraries(bvh PRIVATE distance)
 target_compile_features(bvh PRIVATE cxx_std_17)
 
 add_executable(sample_volume sample_volume.cpp)
@@ -58,7 +59,6 @@ target_link_libraries(sample_cube write_ply)
 target_compile_features(sample_cube PRIVATE cxx_std_17)
 
 add_executable(delaunay delaunay.cpp)
-target_link_libraries(delaunay bvh distance)
 target_compile_features(delaunay PRIVATE cxx_std_17)
 
 include(CTest)
