Use BVH library in the `sample_volume` demo program
the BVH code was actually moved to its own library, but the removal of BVH implementation from `sample_volume.cpp` was not committed till now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ target_link_libraries(bvh PRIVATE distance)
 target_compile_features(bvh PRIVATE cxx_std_17)
 
 add_executable(sample_volume sample_volume.cpp)
-target_link_libraries(sample_volume mesh_io write_ply intersect
+target_link_libraries(sample_volume mesh_io write_ply intersect bvh
                       OpenMP::OpenMP_CXX)
 target_compile_features(sample_volume PRIVATE cxx_std_17)
 
